...
            .onAppear {
                Task {
                    try await viewModel.fetchCoin()
                    isLoggedIn = viewModel.isUserLoggedIn()
                }
            }
            .navigationTitle("Coins")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button(isLoggedIn ? "Profile" : "SignUp") {
                        viewModel.path.append(isLoggedIn ? .profile : .signUp)
                    }
                }
                ToolbarItem(placement: .topBarLeading) {
                    if !isLoggedIn {
                        Button("Login") {
...
